<resources>
    <string name="app_name">Client Portal</string>
    <string name="grant_type_ident">grant_type</string>
    <string name="client_id_ident">client_id</string>
    <string name="client_secret_ident">client_secret</string>
    <string name="username_ident">username</string>
    <string name="password_ident">password</string>
    <string name="scope_ident">scope</string>
    <string name="acr_values_ident">acr_values</string>
    <string name="refresh_token_ident">refresh_token</string>
    <string name="grant_type">password</string>
    <string name="grant_type_refresh">refresh_token</string>
    <string name="client_id">integrationTestClient</string>
    <string name="client_secret">secret</string>
    <string name="scope">openid profile roles soneto_data soneto_web soneto_dataconfig offline_access</string>
    <string name="acr_values">tenant:{{tenant}} bypass_tenant_field:true</string>
    <string name="no_utf8_found">UTF-8 Not found on this system</string>
    <string name="content_type_ids">application/x-www-form-urlencoded</string>
    <string name="content_type_api">application/json</string>
    <string name="api_token_url">https://test-sts.soneto.net/1.0/core/connect/token</string>
    <string name="username_label">Username:</string>
    <string name="pw_label">Password:</string>
    <string name="login_label">Sign In</string>
    <string name="tenant_label">Agency:</string>
    <string name="invalid_username">Username is either empty or not valid</string>
    <string name="invalid_password">Password cannot be empty</string>
    <string name="invalid_tenant">Agency cannot be empty</string>
    <string name="connection_error">Could not establish an internet connection.  Try again.</string>
    <string name="base_api_url">https://test-api.soneto.net/2.99.0.0/api/</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="office_welcome">Welcome To </string>
    <string name="care_message">Your care is our primary concern</string>
    <string name="questions_concerns">If you have any questions about your care, or have an issue with a scheduled appointment, please click the icon in the lower right hand corner to call our office.\n\n<i><b>Swipe to the right to view your upcoming appointments</b></i>"</string>
    <string name="my_schedules">My Appointments</string>
    <string name="my_service_plan">My Service Plan</string>
    <string name="my_invoices">My Invoices</string>
    <string name="status_completed">Completed</string>
    <string name="status_scheduled">Scheduled</string>
    <string name="img_description">Caregiver Image</string>
    <string name="label_caregivername"><b>Caregiver Name:</b></string>
    <string name="label_appointment"><b>Appointment Time:</b></string>
    <string name="label_certperiod"><b>Certification Period:</b></string>
    <string name="label_services"><b>Tasks Performed:</b></string>
    <string name="visit_notes_label"><i>Visit Notes:</i></string>
    <string name="plan_notes_label"><i>Supervisor Comments:</i></string>
    <string name="invoice_number_label"><b>Invoice #:</b></string>
    <string name="invoice_date_label"><b>Invoice Date:</b></string>
    <string name="invoice_servicedates_label"><b>Dates of Service:</b></string>
    <string name="invoice_amount_label"><b>Amount:</b></string>
    <string name="invoice_balance_label"><b>Balance:</b></string>
    <string name="invoice_payer_label"><b>Payer:</b></string>

</resources>
