<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="0,1"
    android:padding="10dp"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context="com.suver.nate.patientscheduler.Activities.ScheduleDetailActivity">
    <ImageView
        android:id="@+id/cgImage"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/img_description"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/label_caregivername"/>
    <TextView
        android:id="@+id/cgName"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/label_appointment"/>
    <TextView
        android:id="@+id/appt"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/label_certperiod"/>
    <TextView
        android:id="@+id/cert"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/label_services"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/taskList"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        />

</LinearLayout>
