<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.suver.nate.patientscheduler.Fragments.OfficeFragment"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/office_welcome" />

    <TextView
        android:id="@+id/officeTitle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textAlignment="center" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/care_message"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/nurse" />
    <TextView
        android:id="@+id/office"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textAlignment="center"
        android:text=""
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:textAlignment="center"
        android:text="@string/questions_concerns"
        />


</LinearLayout>
